add comment pagination
[Finishes #169196734]
